# yuzu

./: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/logging/: backend.cpp  log.h
src/core/: CMakeLists.txt  cpu_manager.cpp  settings.h  telemetry_session.cpp
src/core/arm/: arm_interface.cpp  arm_interface.h  exclusive_monitor.cpp
src/core/arm/hypervisor/: arm_hypervisor.cpp  arm_hypervisor.h  hypervisor_exclusive_monitor.cpp  hypervisor_exclusive_monitor.h
src/core/frontend/: emu_window.h
src/core/hle/kernel/: physical_core.cpp
src/core/hle/kernel/memory/: memory_observer.h  page_table.cpp  page_table.h
src/core/hle/service/am/applets/: controller.cpp
src/core/hle/service/nvdrv/devices/: nvhost_ctrl.cpp
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  video_core.cpp
src/video_core/macro/: macro.cpp
src/video_core/renderer_metal/: mtl_rasterizer.h  mtl_rasterizer.mm  renderer_metal.h  renderer_metal.mm
src/video_core/renderer_vulkan/: fixed_pipeline_state.cpp  renderer_vulkan.cpp  vk_device.cpp  vk_scheduler.cpp  vk_swapchain.cpp  vk_texture_cache.cpp  wrapper.cpp
src/yuzu/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  main.ui  yuzu.entitlements
src/yuzu/configuration/: configure_graphics.cpp  configure_graphics.h  configure_graphics.ui
src/yuzu_cmd/: CMakeLists.txt
src/yuzu_cmd/emu_window/: emu_window_sdl2_vk.cpp
src/yuzu_tester/: CMakeLists.txt
